--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@tsconfig/svelte": "^5.0.2",
     "svelte": "^4.2.12",
     "svelte-check": "^3.6.7",
+    "svelte-routing": "^2.12.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "chart.js": "^4.4.2",
+    "svelte-chartjs": "^3.1.5"
   }
 }
